Fix unreadable text

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.App p {
+  background-color: #000;
+  padding: .5em;
+}
+
 .App-logo {
   height: 50vmin;
   pointer-events: none;
